<resources>
    <string name="app_name">MangMang</string>
    <string name="dev_name">Candi Agusta Islamiano</string>
    <string name="dev_email">mugiwaraagusta@gmail.com</string>
    <string name="icon_button_content_description">Icon Button</string>
    <string-array name="manga_image">
        <item>https://cdn.myanimelist.net/images/manga/1/157897.jpg</item>
        <item>https://cdn.myanimelist.net/images/manga/3/179882.jpg</item>
        <item>https://cdn.myanimelist.net/images/manga/1/259070.jpg</item>
        <item>https://cdn.myanimelist.net/images/manga/2/253146.jpg</item>
        <item>https://cdn.myanimelist.net/images/manga/3/258224.jpg</item>
        <item>https://cdn.myanimelist.net/images/manga/2/258749.jpg</item>
        <item>https://cdn.myanimelist.net/images/manga/2/188925.jpg</item>
        <item>https://cdn.myanimelist.net/images/manga/3/243675.jpg</item>
        <item>https://cdn.myanimelist.net/images/manga/2/166124.jpg</item>
        <item>https://cdn.myanimelist.net/images/manga/3/266834.jpg</item>
    </string-array>
    <string name="about">About</string>
    <string name="detail">Detail</string>
    <string name="by">By</string>
    <string name="lets_connect">Let\'s Connect</string>
    <string name="instagram">Instagram</string>
    <string name="github">GitHub</string>
    <string name="linkedin">LinkedIn</string>
    <string name="credit">Credit</string>
    <string name="thanks_to_myanimelist_for_the_resources">Thanks to MyAnimeList for the resources</string>
    <string name="synopsis">Synopsis</string>
    <string name="score">Score</string>
    <string name="main_character">Main Character</string>
    <string name="chara_1">Chara 1</string>
    <string-array name="manga_title">
        <item>Berserk</item>
        <item>JoJo no Kimyou na Bouken Part 7: Steel Ball Run</item>
        <item>Vagabond</item>
        <item>One Piece</item>
        <item>Monster</item>
        <item>Slam Dunk</item>
        <item>Vinland Saga</item>
        <item>Fullmetal Alchemist</item>
        <item>Grand Blue</item>
        <item>Oyasumi Punpun</item>
    </string-array>
    <string-array name="manga_author">
        <item>Kentaro Miura</item>
        <item>Hirohiko Araki</item>
        <item>Takehiko Inoue</item>
        <item>Eichiro Oda</item>
        <item>Urasawa Naoki</item>
        <item>Takehiko Inoue</item>
        <item>Makoto Yukimura</item>
        <item>Hiromu Arakawa</item>
        <item>Kenji Inoue (Story), Kimitake Yoshioka (Art)</item>
        <item>Inio Asano</item>
    </string-array>
    <string-array name="manga_score">
        <item>9.47</item>
        <item>9.30</item>
        <item>9.25</item>
        <item>9.22</item>
        <item>9.15</item>
        <item>9.09</item>
        <item>9.06</item>
        <item>9.03</item>
        <item>9.03</item>
        <item>9.01</item>
    </string-array>
    <string-array name="manga_synopsis">
        <item>Guts, a former mercenary now known as the "Black Swordsman," is out for revenge. After a tumultuous childhood, he finally finds someone he respects and believes he can trust, only to have everything fall apart when this person takes away everything important to Guts for the purpose of fulfilling his own desires. Now marked for death, Guts becomes condemned to a fate in which he is relentlessly pursued by demonic beings.</item>
        <item>In the American Old West, the world\'s greatest race is about to begin. Thousands line up in San Diego to travel over six thousand kilometers for a chance to win the grand prize of fifty million dollars. With the era of the horse reaching its end, contestants are allowed to use any kind of vehicle they wish. Competitors will have to endure grueling conditions, traveling up to a hundred kilometers a day through uncharted wastelands. The Steel Ball Run is truly a one-of-a-kind event.</item>
        <item>In 16th-century Japan, Shinmen Takezou is a wild, rough young man, in both his appearance and his actions. His aggressive nature has won him the collective reproach and fear of his village, leading him and his best friend, Matahachi Honiden, to run away in search of something grander than provincial life. The pair enlist in the Toyotomi army, yearning for glory—but when the Toyotomi suffer a crushing defeat at the hands of the Tokugawa Clan at the Battle of Sekigahara, the friends barely make it out alive.</item>
        <item>Gol D. Roger, a man referred to as the "King of the Pirates," is set to be executed by the World Government. But just before his demise, he confirms the existence of a great treasure, One Piece, located somewhere within the vast ocean known as the Grand Line. Announcing that One Piece can be claimed by anyone worthy enough to reach it, the King of the Pirates is executed and the Great Age of Pirates begins.</item>
        <item>Kenzou Tenma, a renowned Japanese neurosurgeon working in post-war Germany, faces a difficult choice: to operate on Johan Liebert, an orphan boy on the verge of death, or on the mayor of Düsseldorf. In the end, Tenma decides to gamble his reputation by saving Johan, effectively leaving the mayor for dead.</item>
        <item>Hanamichi Sakuragi, a tall, boisterous teenager with flame-red hair and physical strength beyond his years, is eager to put an end to his rejection streak of 50 and finally score a girlfriend as he begins his first year of Shohoku High. However, his reputation for delinquency and destructiveness precedes him, and most of his fellow students subsequently avoid him like the plague. As his first day of school ends, he is left with two strong thoughts: "I hate basketball" and "I need a girlfriend."</item>
        <item>Thorfinn, son of one of the Vikings\' greatest warriors, is among the finest fighters in the merry band of mercenaries run by the cunning Askeladd, an impressive feat for a person his age. However, Thorfinn is not part of the group for the plunder it entails—instead, for having caused his family great tragedy, the boy has vowed to kill Askeladd in a fair duel. Not yet skilled enough to defeat him, but unable to abandon his vengeance, Thorfinn spends his boyhood with the mercenary crew, honing his skills on the battlefield among the war-loving Danes, where killing is just another pleasure of life.</item>
        <item>Alchemists are knowledgeable and naturally talented individuals who can manipulate and modify matter due to their art. Yet despite the wide range of possibilities, alchemy is not as all-powerful as most would believe. Human transmutation is strictly forbidden, and whoever attempts it risks severe consequences. Even so, siblings Edward and Alphonse Elric decide to ignore this great taboo and bring their mother back to life. Unfortunately, not only do they fail in resurrecting her, they also pay an extremely high price for their arrogance: Edward loses his left leg and Alphonse his entire body. Furthermore, Edward also gives up his right arm in order to seal his brother\'s soul into a suit of armor.</item>
        <item>Among the seaside town of Izu\'s ocean waves and rays of shining sun, Iori Kitahara is just beginning his freshman year at Izu University. As he moves into his uncle\'s scuba diving shop, Grand Blue, he eagerly anticipates his dream college life, filled with beautiful girls and good friends.</item>
        <item>Punpun Onodera is a normal 11-year-old boy living in Japan. Hopelessly idealistic and romantic, Punpun begins to see his life take a subtle—though nonetheless startling—turn to the adult when he meets the new girl in his class, Aiko Tanaka. It is then that the quiet boy learns just how fickle maintaining a relationship can be, and the surmounting difficulties of transitioning from a naïve boyhood to a convoluted adulthood. When his father assaults his mother one night, Punpun realizes another thing: those whom he looked up to were not as impressive as he once thought.</item>
    </string-array>
    <string-array name="manga_genres">
        <item>Action, Adventure, Award Winning, Drama, Fantasy, Horror, Supernatural</item>
        <item>Action, Adventure, Mystery, Supernatural</item>
        <item>Action, Adventure, Award Winning</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Award Winning, Drama, Mystery</item>
        <item>Award Winning, Sports</item>
        <item>Action, Adventure, Award Winning, Drama</item>
        <item>Action, Adventure, Award Winning, Drama, Fantasy</item>
        <item>Comedy</item>
        <item>Drama, Slice of Life</item>
    </string-array>
    <string-array name="manga_published_date">
        <item>Aug 25, 1989</item>
        <item>Jan 19, 2004</item>
        <item>Sep 3, 1998</item>
        <item>Jul 22, 1997</item>
        <item>Dec 5, 1994</item>
        <item>Sep 18, 1990</item>
        <item>Apr 13, 2005</item>
        <item>Jul 12, 2001</item>
        <item>Apr 7, 2014</item>
        <item>Mar 15, 2007</item>
    </string-array>
    <string-array name="manga_chara_image">
        <item>https://cdn.myanimelist.net/images/characters/9/347984.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/13/311885.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/11/348750.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/9/310307.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/4/316522.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/7/314546.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/14/401940.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/9/72533.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/5/368040.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/12/333827.jpg</item>
    </string-array>
    <string-array name="manga_chara_name">
        <item>Guts</item>
        <item>Gyro Zeppeli</item>
        <item>Musashi Miyamoto</item>
        <item>Monkey D. Luffy</item>
        <item>Johan Liebert</item>
        <item>Hanamichi Sakuragi</item>
        <item>Askeladd</item>
        <item>Edward Elric</item>
        <item>Chisa Kotegawa</item>
        <item>Punpun Onodera</item>
    </string-array>
    <string-array name="manga_chara_image2">
        <item>https://cdn.myanimelist.net/images/characters/9/326322.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/16/337509.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/14/76211.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/3/100534.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/15/347641.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/10/95008.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/9/309871.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/5/54265.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/10/387495.jpg</item>
        <item>https://cdn.myanimelist.net/images/characters/5/158639.jpg</item>
    </string-array>
    <string-array name="manga_chara_name2">
        <item>Griffit</item>
        <item>Johnny Joestar</item>
        <item>Kojirou Sasaki</item>
        <item>Roronoa Zoro</item>
        <item>Kenzou Tenma</item>
        <item>Hisashi Hitsui</item>
        <item>Thorfinn</item>
        <item>Alphonse Elric</item>
        <item>Iori Kitahara</item>
        <item>Aiko Tanaka</item>
    </string-array>
</resources>