<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appbar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/blue"
            android:contentDescription="@string/icon_button_content_description"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:theme="@style/TextStyle.Headline.Appbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/about"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/appbar_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_name"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@id/iv_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_email"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_lets_connect"
                style="@style/TextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lets_connect"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_github"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@id/tv_lets_connect"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_instagram"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instagram"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@id/tv_lets_connect"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_github" />

            <TextView
                android:id="@+id/tv_linkedin"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linkedin"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@id/tv_lets_connect"
                app:layout_constraintStart_toStartOf="@id/tv_github"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_credit"
                style="@style/TextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@id/tv_github"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_credit_description"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thanks_to_myanimelist_for_the_resources"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="18dp"
                app:layout_constraintTop_toBottomOf="@id/tv_credit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>