<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_manga"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/manga_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/ll_text_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_manga"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:theme="@style/TextStyle.Headline"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:maxLines="2"/>

            <TextView
                android:id="@+id/tv_by"
                style="@style/TextStyle"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/by" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:theme="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@tools:sample/lorem/random"
                android:maxLines="3"
                android:ellipsize="end"/>

        </LinearLayout>

        <Button
            android:id="@+id/b_detail"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/ll_text_wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>