<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appbar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/blue"
            android:contentDescription="@string/icon_button_content_description"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:theme="@style/TextStyle.Headline.Appbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/detail"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/action_share"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/blue"
            android:contentDescription="@string/icon_button_content_description"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_detail_image"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/text_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="18dp"
                android:paddingTop="14dp"
                android:paddingEnd="18dp"
                android:paddingBottom="18dp">

                <TextView
                    android:id="@+id/tv_detail_title"
                    style="@style/TextStyle.Headline"
                    android:textColor="@color/blue"
                    android:textSize="22sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/lorem"/>

                <TextView
                    android:id="@+id/tv_detail_by"
                    android:theme="@style/TextStyle.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by" />

                <TextView
                    android:id="@+id/tv_score"
                    android:theme="@style/TextStyle.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/tv_genres"
                    android:theme="@style/TextStyle.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Genres"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/tv_synopsis_header"
                    android:theme="@style/TextStyle.Bold"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/synopsis"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/tv_synopsis"
                    android:theme="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/synopsis"
                    android:layout_marginTop="8dp" />

                <TextView
                    style="@style/TextStyle.Bold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_character"
                    android:layout_marginTop="10dp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_main_chara"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            tools:src="@tools:sample/avatars"
                            android:scaleType="centerCrop"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:id="@+id/tv_main_chara"
                            style="@style/TextStyle.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chara_1"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/iv_main_chara"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_main_chara2"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            tools:src="@tools:sample/avatars"
                            android:scaleType="centerCrop"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:id="@+id/tv_main_chara2"
                            style="@style/TextStyle.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chara_1"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/iv_main_chara2"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_main_chara3"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            tools:src="@tools:sample/avatars"
                            android:scaleType="centerCrop"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:id="@+id/tv_main_chara3"
                            style="@style/TextStyle.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chara_1"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/iv_main_chara3"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>